fix wrapping inline links in disclosure and update stories

--- a/mt-kit/core/css/src/components/_disclosure.scss
+++ b/mt-kit/core/css/src/components/_disclosure.scss
@@ -37,10 +37,11 @@
 
     padding: 0 0 var(--spacer-x-small) 0;
 
-    .mt-link {
-      @include apply-external-link-icon($position: before) {
-        display: flex;
-        width: fit-content;
+    > div {
+      > .mt-link {
+        @include apply-external-link-icon($position: before) {
+          display: flex;
+        }
       }
     }
 
